--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "jquery": "^3.6.4",
+    "lightbox2": "^2.11.4",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
